fix(ui): fixed background not fitting to end of screen

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 html,
 body,
 #root {
-  height: 100%;
+  min-height: 100%;
+  height: auto;
   overflow-x: hidden;
 }
 
